--- a/en.htm
+++ b/en.htm
@@ -1,198 +1,236 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
 <head>
-	<title>Shower Presentation Template</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=1274, user-scalable=no">
-	<link rel="stylesheet" href="themes/ribbon/styles/style.css">
-	<link rel="stylesheet" href="themes/ribbon/styles/print.css" media="print">
-	<!--
-		To apply styles to the certain slides
-		use slide ID to get needed elements
-		-->
-	<style>
-		#Cover h2 {
-			color:#FFF;
-			text-align:center;
-			font-size:70px;
-			}
-		#FitToWidth h2,
-		#FitToHeight h2 {
-			color:#FFF;
-			text-align:center;
-			}
-	</style>
+    <title>Shower Presentation Template</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=1274, user-scalable=no">
+    <link rel="stylesheet" href="themes/ribbon/styles/style.css">
+    <link rel="stylesheet" href="themes/ribbon/styles/print.css" media="print">
+    <!--
+        To apply styles to the certain slides
+        use slide ID to get needed elements
+        -->
+    <style>
+        #Cover h2 {
+            color:#FFF;
+            text-align:center;
+            font-size:70px;
+        }
+
+        #FitToWidth h2,
+        #FitToHeight h2 {
+            color:#FFF;
+            text-align:center;
+        }
+
+        .names {
+            color: #111;
+        }
+
+        .names table tr td {
+            text-align: left;
+            width: 320px;
+        }
+
+        .underline {
+            text-decoration: underline;
+        }
+
+        .example {
+            font-size: 22px;
+            margin: 0 30px;
+        }
+
+        .slide.shout h2 {
+            font-size: 100px;
+        }
+    </style>
 </head>
 <body class="list">
-	<header class="caption">
-		<h1>Shower Presentation Template</h1>
-		<p>Vadim Makeev, Opera Software</p>
-	</header>
-	<div class="slide cover" id="Cover"><div>
-		<section>
-			<header>
-				<h2>Shower Presentation Template</h2>
-			</header>
-			<img src="pictures/cover.jpg" alt="">
-		</section>
-	</div></div>
-	<div class="slide" id="Header"><div>
-		<section>
-			<header>
-				<h2>Header</h2>
-			</header>
-			<p>This <code>&lt;tool&gt;</code> is provided <strong>without</strong> warranty, guarantee, or much in the way of explanation. Note that use of this tool may or may not crash <em>your</em> browser.</p>
-			<p><a href="examples/index.htm" target="_blank">This link will be opened in the new tab</a></p>
-		</section>
-	</div></div>
-	<div class="slide" id="TwoLinesHeader"><div>
-		<section>
-			<header>
-				<h2>Two rows.<br>Mighty heading</h2>
-			</header>
-			<p>This <code>&lt;tool&gt;</code> is provided <strong>without</strong> warranty, guarantee, or much in the way of explanation. Note that use of this tool may or may not crash <em>your</em> browser.</p>
-		</section>
-	</div></div>
-	<div class="slide" id="UnorderedList"><div>
-		<section>
-			<header>
-				<h2>Unordered List</h2>
-			</header>
-			<ul>
-				<li>This tool is provided</li>
-				<li>Without warranty, guarantee</li>
-				<li>Or much in the way of explanation
-					<ol>
-						<li>Note that use of this tool</li>
-						<li>May or may not crash your browser</li>
-						<li>Lock up your machine</li>
-					</ol>
-				</li>
-				<li>Erase your hard drive.</li>
-			</ul>
-		</section>
-	</div></div>
-	<div class="slide" id="OrderedList"><div>
-		<section>
-			<header>
-				<h2>Ordered List</h2>
-			</header>
-			<ol>
-				<li>Note that use of this tool</li>
-				<li>Erase your hard drive.</li>
-				<li>May or may not crash your browser
-					<ul>
-						<li>This tool is provided</li>
-						<li>Or much in the way of explanation</li>
-						<li>Without warranty, guarantee</li>
-					</ul>
-				</li>
-				<li>Lock up your machine</li>
-			</ol>
-		</section>
-	</div></div>
-	<div class="slide" id="InTheMiddle"><div>
-		<section>
-			<header>
-				<h2>In the Middle</h2>
-			</header>
-			<svg xmlns="http://www.w3.org/2000/svg" width="256" height="256" viewBox="0 0 512 512" class="middle">
-				<path fill="#0174A7" d="m315 259l18-18 179 179v-36l-161-161 18-18 143 143v-36l-125-125 18-18 107 107v-225c0-28-23-51-51-51h-410c-28 0-51 23-51 51v410c0 28 23 51 51 51h191c17-25 14-59-8-81l-63-63-63-63c-55-55-55-145-0-199 55-55 144-55 199 0l9 7h109l-163 163v-107l-9-9c-25-25-66-25-91-0-25 25-25 66 0 91l63 63 63 63c37 37 49 89 37 135h136c28 0 51-23 51-51v-5l-197-197z"/>
-			</svg>
-		</section>
-	</div></div>
-	<div class="slide cover" id="FitToHeight"><div>
-		<section>
-			<header>
-				<h2>Fit to height</h2>
-			</header>
-			<img src="pictures/picture.jpg" alt="">
-		</section>
-	</div></div>
-	<div class="slide cover w" id="FitToWidth"><div>
-		<section>
-			<header>
-				<h2>Fit to width</h2>
-			</header>
-			<img src="pictures/picture.jpg" alt="">
-		</section>
-	</div></div>
-	<div class="slide" id="CodeSample"><div>
-		<section>
-			<header>
-				<h2>Code Sample</h2>
-			</header>
-			<pre>
-				<code>&lt;html lang="en-US"&gt;</code>
-				<code><mark>&lt;head&gt;</mark></code>
-				<code>    &lt;title&gt;Shower&lt;/title&gt;</code>
-				<code>    &lt;meta charset="<mark class="important">UTF-8</mark>"&gt;</code>
-				<code>    &lt;link rel="stylesheet" href="s/screen.css"&gt;</code>
-				<code>    &lt;script src="j/jquery.js"&gt;&lt;/script&gt;</code>
-				<code><mark>&lt;/head&gt;</mark></code>
-			</pre>
-		</section>
-	</div></div>
-	<div class="slide" id="CodeNotes"><div>
-		<section>
-			<header>
-				<h2>Code Notes</h2>
-			</header>
-			<pre>
-				<code><mark>&lt;html</mark> lang="en-US"&gt;</code>
-			</pre>
-			<p class="note">May or may not crash your browser</p>
-			<pre>
-				<code><mark>&lt;meta</mark> charset="<mark>UTF-8</mark>"&gt;</code>
-			</pre>
-			<p class="note">Lock up your machine</p>
-		</section>
-	</div></div>
-	<div class="slide shout" id="Shout"><div>
-		<section>
-			<header>
-				<h2>Warning<br>Message</h2>
-			</header>
-		</section>
-	</div></div>
-	<div class="slide shout" id="Demo"><div>
-		<section>
-			<header>
-				<h2><a href="examples/index.htm" target="_blank">Demo</a></h2>
-			</header>
-		</section>
-	</div></div>
-	<div class="slide" id="BlockQuote"><div>
-		<section>
-			<header>
-				<h2>Block Quote</h2>
-			</header>
-			<blockquote>
-				<p>This tool is provided without warranty, guarantee, or much in the way of explanation. Note that use of this tool may or may not crash your browser, lock up your machine, erase your hard drive.</p>
-			</blockquote>
-		</section>
-	</div></div>
-	<div class="slide" id="ThankYou"><div>
-		<section>
-			<header>
-				<h2>Shower Presentation Template</h2>
-			</header>
-			<p>Vadim Makeev, Opera Software</p>
-			<ul>
-				<li><a href="http://pepelsbey.net">pepelsbey.net</a></li>
-				<li><a href="http://twitter.com/pepelsbey">twitter.com/pepelsbey</a></li>
-				<li><a href="mailto:pepelsbey@gmail.com">pepelsbey@gmail.com</a></li>
-			</ul>
-			<p>Shower: <a href="http://github.com/pepelsbey/shower">github.com/pepelsbey/shower</a></p>
-		</section>
-	</div></div>
-	<!--
-		To hide progress bar from entire presentation
-		just remove “progress” element.
-		-->
-	<div class="progress"><div></div></div>
-	<script src="scripts/script.js"></script>
-	<!-- Copyright © 2010–2012 Vadim Makeev — pepelsbey.net -->
-	<!-- Photos by John Carey — fiftyfootshadows.net -->
+    <header class="caption">
+        <!-- <h1>The Engineering Network</h1> -->
+        <img src="pictures/ten2012.png" width="70%" alt="">
+        <!-- <p>Aamir Abbas, Adrian Lee, Mohamed Abd El Meguid, Yousef Al Taher, Shi Zhuo</p> -->
+
+        <div class="names">
+            <p class="underline">Team Members</p>
+            <table border="0">
+                <tr>
+                    <td>Aamir Abbas</td>
+                    <td>Adrian Lee</td>
+                    <td>Shi Zhuo</td>
+                </tr>
+                <tr>
+                    <td>Mohamed Abd El Meguid</td>
+                    <td>Yousef Al Taher</td>
+                </tr>
+            </table>
+            <br/>
+            <p class="underline">Advisor</p>
+            <p>Professor Aditya Mahajan</p>
+        </div>
+    </header>
+
+
+    <div class="slide cover" id="Cover"><div>
+        <section>
+            <header>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <br/>
+                <h2>The Engineering Network (TeN)</h2>
+            </header>
+            <img src="pictures/cover.jpg" alt="">
+        </section>
+    </div></div>
+
+    <div class="slide" id="contents"><div>
+        <section>
+            <header>
+                <h2>What we'll cover today</h2>
+            </header>
+            <ul>
+                <li>Introduction</li>
+                <li>Our Objectives</li>
+                <li>The Software</li>
+                <li>The Hardware</li>
+                <li>Impact On Society & Environment</li>
+            </ul>
+        </section>
+    </div></div>
+
+    <div class="slide" id="intro1"><div>
+        <section>
+            <header>
+                <h2>Introduction:<br>Background of TeN</h2>
+            </header>
+            <p>
+                <strong>Digital Signage</strong> has proven to be an excellent addition to the mediums of communication to McGill students.
+            </p>
+            <p>
+                TeN can be found in 7 locations in the Engineering Complex, in three residences, in the Shatner Building, and in the Rutherford Physics Building.
+            </p>
+        </section>
+    </div></div>
+
+    <div class="slide" id="intro2"><div>
+        <section>
+            <header>
+                <h2>Introduction:<br>Current TeN features</h2>
+            </header>
+            <ul>
+                <li>Location-specific slide deployment</li>
+                <li>Slide Override (Exam Schedule & Location)</li>
+                <li>Full-fleged administrator control panel</li>
+                <li>Remote root access to clients</li>
+            </ul>
+        </section>
+    </div></div>
+
+    <div class="slide" id="intro3"><div>
+        <section>
+            <header>
+                <h2>Introduction:<br>Problems with TeN</h2>
+            </header>
+            <ul>
+                <li>No active development on TeN Platform</li>
+                <li>Synchronization issues</li>
+                <li>Little to no automation</li>
+                <ul><li>Long & Painful slide submission process</li></ul>
+                <li>Unfriendly Control Panel UI & UX</li>
+            </ul>
+        </section>
+    </div></div>
+
+    <div class="slide" id="objectives"><div>
+        <section>
+            <header>
+                <h2>Objectives:<br/>What We Want</h2>
+            </header>
+                <ol>
+                    <li>Bring platform up to speed with <strong>Current</strong> technology</li>
+                    <li><strong>Future Proof</strong></li>
+                    <span class="example">- Maintainable code base</span><br/>
+                    <span class="example">- Extendable for future features / functionality</span>
+                    <li>Rapidly deployable</li>
+                    <li>Affordable hardware</li>
+                </ol>
+        </section>
+    </div></div>
+
+    <div class="slide" id="objectives2"><div>
+        <section>
+            <header>
+                <h2>Objectives:<br/>What We Have (Budget & Funding)</h2>
+            </header>
+                <img src="pictures/EUS-Logo-Vector.png" alt="" width="150px"/>
+                <ul>
+                    <li>$400 Hardware R&D budget</li>
+                    <li>Support for deployment from EUS upon completion</li>
+                </ul>
+        </section>
+    </div></div>
+
+    <div class="slide" id="objectives3"><div>
+        <section>
+            <header>
+                <h2>Objectives:<br/>How We Will Do It</h2>
+            </header>
+                <ol>
+                    <li>Divide team (Software / Hardware)</li>
+                    <li><strong>Software</strong> - Design & develop a new software stack</li>
+                    <li><strong>Hardware</strong> - Find a cost effective solution</li>
+                </ol>
+        </section>
+    </div></div>
+
+    <div class="slide shout" id="software"><div>
+        <section>
+            <header>
+                <h2>The Software</h2>
+            </header>
+            <p>Adrian Lee & Yousef</p>
+        </section>
+    </div></div>
+
+    <div class="slide shout" id="hardware"><div>
+        <section>
+            <header>
+                <h2>The Hardware</h2>
+            </header>
+            <p>Shi Zhuo</p>
+        </section>
+    </div></div>
+
+    <div class="slide shout" id="impact"><div>
+        <section>
+            <header>
+                <h2>Impact On Society and Environment</h2>
+            </header>
+            <p>Aamir Abbas</p>
+        </section>
+    </div></div>
+
+    <div class="slide shout" id="Shout"><div>
+        <section>
+            <header>
+                <h2>The Software</h2>
+            </header>
+            <p>Adrian Lee & Yousef</p>
+        </section>
+    </div></div>
+
+    <!--
+        To hide progress bar from entire presentation
+        just remove “progress” element.
+        -->
+    <div class="progress"><div></div></div>
+    <script src="scripts/script.js"></script>
+    <!-- Copyright © 2010–2012 Vadim Makeev — pepelsbey.net -->
+    <!-- Photos by John Carey — fiftyfootshadows.net -->
 </body>
 </html>
