Modified hardware responsibilties

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                 <br/>
                 <br/>
                 <br/>
+                <br/>
                 <h2>The Engineering Network (TeN)</h2>
             </header>
             <img src="pictures/cover.jpg" alt="">
@@ -180,11 +181,13 @@
             <header>
                 <h2>Objectives:<br/>How We Will Do It</h2>
             </header>
-                <ol>
+                <ul>
                     <li>Divide team (Software / Hardware)</li>
-                    <li><strong>Software</strong> - Design & develop a new software stack</li>
-                    <li><strong>Hardware</strong> - Find a cost effective solution</li>
-                </ol>
+                    <ul>
+                        <li><strong>Software</strong> - R&D for new software stack</li>
+                        <li><strong>Hardware</strong> - Find a cost-effective solution for our digital signage purposes</li>
+                    </ul>
+                </ul>
         </section>
     </div></div>
 
