--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 <h2>Objectives:<br/>How We Will Do It</h2>
             </header>
                 <ul>
-                    <li>Divide team (Software / Hardware)</li>
+                    <li>Divide responsibilities</li>
                     <ul>
                         <li><strong>Software</strong> - R&D for new software stack</li>
                         <li><strong>Hardware</strong> - Find a cost-effective solution for our digital signage purposes</li>
