added member repsonibilities

--- a/index.html
+++ b/index.html
@@ -185,7 +185,22 @@
                     <li>Divide responsibilities</li>
                     <ul>
                         <li><strong>Software</strong> - R&D for new software stack</li>
-                        <li><strong>Hardware</strong> - Find a cost-effective solution for our digital signage purposes</li>
+                        <li><strong>Hardware</strong> - Find a reliable & cost-effective solution for our digital signage purposes</li>
+                    </ul>
+                </ul>
+        </section>
+    </div></div>
+
+    <div class="slide" id="objectives4"><div>
+        <section>
+            <header>
+                <h2>Objectives:<br/>How We Will Do It</h2>
+            </header>
+                <ul>
+                    <li>Divide responsibilities</li>
+                    <ul>
+                        <li><strong>Software</strong> - Adrian, Aamir, Mohamed, Yousef</li>
+                        <li><strong>Hardware</strong> - Shi</li>
                     </ul>
                 </ul>
         </section>
