Added mocks & software stuff

--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
         </section>
     </div></div>
 
-    <div class="slide" id="objectives3"><div>
+    <div class="slide" id="design1"><div>
         <section>
             <header>
-                <h2>Objectives:<br/>How We Will Do It</h2>
+                <h2>Design:<br/>How We Will Do It</h2>
             </header>
                 <ul>
                     <li>Divide responsibilities</li>
@@ -191,10 +191,10 @@
         </section>
     </div></div>
 
-    <div class="slide" id="objectives4"><div>
+    <div class="slide" id="design2"><div>
         <section>
             <header>
-                <h2>Objectives:<br/>How We Will Do It</h2>
+                <h2>Design:<br/>How We Will Do It</h2>
             </header>
                 <ul>
                     <li>Divide responsibilities</li>
@@ -206,6 +206,16 @@
         </section>
     </div></div>
 
+    <div class="slide" id="design3"><div>
+        <section>
+            <header>
+                <h2>Overview of Proposed Platform Architecture</h2>
+            </header>
+                Add image of server client raspberry pi
+                <img src="pictures/ten2012.png" width="70%" alt="" />
+        </section>
+    </div></div>
+
     <div class="slide shout" id="software"><div>
         <section>
             <header>
@@ -214,6 +224,126 @@
             <p>Adrian Lee & Yousef</p>
         </section>
     </div></div>
+
+    <div class="slide" id="software1"><div>
+        <section>
+            <header>
+                <h2>Software:<br/>Slide 1</h2>
+            </header>
+            Built with latest Web Technologies
+            Explore and Leverage latest  web technologies
+            Extensibility to website, mobile devices, social media
+
+            Redesign of TeN Platform
+        </section>
+    </div></div>
+
+    <div class="slide" id="software2"><div>
+        <section>
+            <header>
+                <h2>Software:<br/>Slide 2</h2>
+            </header>
+            Look back on diagram
+        </section>
+    </div></div>
+
+    <div class="slide" id="software3"><div>
+        <section>
+            <header>
+                <h2>Software:<br/>Considerations</h2>
+            </header>
+            <ol>
+                <li>Web Development Heavy</li>
+                    <span class="example">- Prior knowledge, Learning curve</span><br/>
+                <li>Two Months Development</li>
+                <span class="example">- Agile Development Process</span><br/>
+                <li>Four simultaneous Developers & Testers</li>
+            </ol>
+
+        </section>
+    </div></div>
+
+    <div class="slide" id="software4"><div>
+        <section>
+            <header>
+                <h2>Software:<br/>Programming Language</h2>
+            </header>
+            <ul>
+                <li>HTML5 & JavaScript will be used for all software implementations</li>
+                <ul><li>To help us focus more on software architecture and design philosophy, rather than learning various web languages</li></ul>
+                <br/>
+                <li>Node.js will be used as our web-server and code execution environment</li>
+                <ul><li>API, Business Logic</li></ul>
+            </ul>
+
+        </section>
+    </div></div>
+
+    <div class="slide" id="software5"><div>
+        <section>
+            <header>
+                <h2>Software:<br/>Database</h2>
+            </header>
+            <ul>
+                <li>MongoDB: an open source, NoSQL database</li>
+                <ul>
+                    <li>Document Based Database</li>
+                    <li>Data is stored as JSON style, hence easier parsing, validation and debugging</li>
+                </ul>
+            </ul>
+        </section>
+    </div></div>
+
+    <div class="slide shout" id="mockup"><div>
+        <section>
+            <header>
+                <h2>CMS Mockup</h2>
+                <a href="http://ten.jit.su">Live Demo: TeN CMS</a>
+            </header>
+        </section>
+    </div></div>
+
+    <!--
+
+    <div class="slide cover" id="mockup1"><div>
+        <section>
+            <header>
+                <h2></h2>
+            </header>
+            <img src="pictures/login.png" alt="">
+        </section>
+    </div></div>
+
+    s<div class="slide cover" id="mockup2"><div>
+        <section>
+            <header>
+                <h2></h2>
+            </header>
+            <img src="pictures/user_dash.png" alt="">
+        </section>
+    </div></div>
+
+
+    <div class="slide cover" id="mockup3"><div>
+        <section>
+            <header>
+                <h2></h2>
+            </header>
+            <img src="pictures/slide_submission.png" alt="">
+        </section>
+    </div></div>
+
+
+    <div class="slide cover" id="mockup4"><div>
+        <section>
+            <header>
+                <h2></h2>
+            </header>
+            <img src="pictures/admin_dash.png" alt="">
+        </section>
+    </div></div>
+
+    -->
 
     <div class="slide shout" id="hardware"><div>
         <section>
