--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             <header>
                 <h2>The Software</h2>
             </header>
-            <p>Adrian Lee & Yousef</p>
+            <p>Adrian Lee & Yousef Al Taher</p>
         </section>
     </div></div>
 
@@ -255,7 +255,7 @@
             <ol>
                 <li>Web Development Heavy</li>
                     <span class="example">- Prior knowledge, Learning curve</span><br/>
-                <li>Two Months Development</li>
+                <li>Three Months of Development</li>
                 <span class="example">- Agile Development Process</span><br/>
                 <li>Four simultaneous Developers & Testers</li>
             </ol>
@@ -269,10 +269,10 @@
                 <h2>Software:<br/>Programming Language</h2>
             </header>
             <ul>
-                <li>HTML5 & JavaScript will be used for all software implementations</li>
+                <li><strong>HTML5</strong> & <strong>JavaScript</strong> will be used for all software implementations</li>
                 <ul><li>To help us focus more on software architecture and design philosophy, rather than learning various web languages</li></ul>
                 <br/>
-                <li>Node.js will be used as our web-server and code execution environment</li>
+                <li><strong>Node.js</strong> will be used as our web-server and code execution environment</li>
                 <ul><li>API, Business Logic</li></ul>
             </ul>
 
@@ -285,10 +285,14 @@
                 <h2>Software:<br/>Database</h2>
             </header>
             <ul>
-                <li>MongoDB: an open source, NoSQL database</li>
+                <li><strong>MongoDB</strong>: an open-source NoSQL database</li>
                 <ul>
                     <li>Document Based Database</li>
-                    <li>Data is stored as JSON style, hence easier parsing, validation and debugging</li>
+                        <ul>
+                            <li>Data is stored as JSON-style Object</li>
+                            <li>Easier parsing, validation and debugging</li>
+                        </ul>
+                    <li>Growing Popularity and Adoption in Web Industry</li>
                 </ul>
             </ul>
         </section>
@@ -351,6 +355,59 @@
                 <h2>The Hardware</h2>
             </header>
             <p>Shi Zhuo</p>
+        </section>
+    </div></div>
+
+    <div class="slide" id="hardware1"><div>
+        <section>
+            <header>
+                <h2>Hardware:<br/>Current Hardware</h2>
+            </header>
+            <ul>
+                <li>TeN currently runs on a full-size Desktop PC</li>
+                <li>Costs $200-$300/ea</li>
+                <li>High power consumption ~ 100W</li>
+                <li>More than sufficient</li>
+                <li>Big and heavy to mount</li>
+            </ul>
+        </section>
+    </div></div>
+
+    <div class="slide" id="hardware2"><div>
+        <section>
+            <header>
+                <h2>Hardware:<br/>Main Requirements</h2>
+            </header>
+            <ul>
+                <li>Ability to run HTML5, Javascript and CSS3</li>
+                <li>Required peripherals are HDMI, Ethernet/Wifi, USB</li>
+                <li>Reliable 24/7 service</li>
+                <li>Minimal cost and size</li>
+            </ul>
+        </section>
+    </div></div>
+
+    <div class="slide" id="hardware3"><div>
+        <section>
+            <header>
+                <h2>Hardware:<br/>Hardware Resources</h2>
+            </header>
+            <table border="0">
+                <tr>
+                    <th>Raspberry Pi (rev. B)</th>
+                    <th>MK-803 MINI Android PC</th>
+                    <th>MINI-ITX x86 with DC</th>
+                </tr>
+                <tr>
+                    <td>Aamir Abbas</td>
+                    <td>Adrian Lee</td>
+                    <td>Shi Zhuo</td>
+                </tr>
+                <tr>
+                    <td>Mohamed Abd El Meguid</td>
+                    <td>Yousef Al Taher</td>
+                </tr>
+            </table>
         </section>
     </div></div>
 
