--- a/index.html
+++ b/index.html
@@ -44,6 +44,23 @@
         .slide.shout h2 {
             font-size: 100px;
         }
+
+        .hardware_table {
+            border: 2px solid #333;
+            font-size: 14px;
+        }
+
+        .hardware_table th {
+            border: 2px solid #333;
+            font-size: 15px;
+            width: 30%;
+        }
+
+        .hardware_table td {
+            border: 2px solid #333;
+            padding: 10px;
+            text-align: center;
+        }
     </style>
 </head>
 <body class="list">
@@ -392,22 +409,53 @@
             <header>
                 <h2>Hardware:<br/>Hardware Resources</h2>
             </header>
-            <table border="0">
+            <table class="hardware_table">
                 <tr>
                     <th>Raspberry Pi (rev. B)</th>
                     <th>MK-803 MINI Android PC</th>
                     <th>MINI-ITX x86 with DC</th>
                 </tr>
                 <tr>
-                    <td>Aamir Abbas</td>
-                    <td>Adrian Lee</td>
-                    <td>Shi Zhuo</td>
+                    <td><img src="pictures/rpi.jpg" width="100px" alt=""/></td>
+                    <td><img src="pictures/andriod.jpg" width="200px" alt=""/></td>
+                    <td><img src="pictures/itx.jpg" width="70px" alt=""/></td>
                 </tr>
                 <tr>
-                    <td>Mohamed Abd El Meguid</td>
-                    <td>Yousef Al Taher</td>
+                    <td>BCM2835 700MHz / 512MB RAM / HDMI / Ethernet / SD / USB</td>
+                    <td>Cortex-A9 1GHz Dual Core / 1GB RAM / 4GB NAND / USB / HDMI / WIFI</td>
+                    <td>AMD APU-E350 1.6GHz / Up to 4GB RAM / HDMI / USB / Ethernet / Wifi</td>
+                </tr>
+                <tr>
+                    <td>Raspbian / Arch Linux</td>
+                    <td>Android 4.0</td>
+                    <td>Windows / Linux</td>
                 </tr>
             </table>
+        </section>
+    </div></div>
+
+    <div class="slide" id="hardware4"><div>
+        <section>
+            <header>
+                <h2>Current DUT: Raspberry Pi</h2>
+            </header>
+            <ul>
+                <li>Boot up time: 58s</li>
+                <li>720P H.264 Video decoding with 30% CPU load</li>
+                <li>Chromium Browser with HTML5 testing score 362/500</li>
+                <li>Lack of video/audio support for HTML5, but great for rendering text and pictures</li>
+                <li>Overall speed limitation due to SD card</li>
+                <li>Peripherals on Raspberry Pi are perfect for our project</li>
+            </ul>
+        </section>
+    </div></div>
+
+    <div class="slide cover" id="hardware5"><div>
+        <section>
+            <header>
+                <h2></h2>
+            </header>
+            <img src="pictures/IMG_0310-001.jpg" alt="">
         </section>
     </div></div>
 
@@ -420,12 +468,101 @@
         </section>
     </div></div>
 
-    <div class="slide shout" id="Shout"><div>
+    <div class="slide" id="impact1"><div>
         <section>
             <header>
-                <h2>The Software</h2>
+                <h2>Impact On Society and Environment:<br/>Benefits to the Environment</h2>
             </header>
-            <p>Adrian Lee & Yousef</p>
+            <ul>
+                <li>Minimal power consumption of hardware resources:</li>
+                <ul>
+                    <li>Client Hardware power consumption: </li>
+                    <ul><li>Ranges between 2.5W/hr ~ 5W/hr</li></ul>
+                    <li>Typical LCD monitor power consumption:</li>
+                    <ul><li>Active mode : 13W/hr</li></ul>
+                </ul>
+            </ul>
+        </section>
+    </div></div>
+
+    <div class="slide" id="impact2"><div>
+        <section>
+            <header>
+                <h2>Impact On Society and Environment:<br/>Reduced Paper Consumption</h2>
+            </header>
+            <ul>
+                <li>Lesser printouts, minimizing paper consumption</li>
+                <li>Tonnes of paper are just tossed away on a daily basis without going into recycling</li>
+            </ul>
+        </section>
+    </div></div>
+
+    <div class="slide cover" id="impact3"><div>
+        <section>
+            <header>
+                <h2></h2>
+            </header>
+            <img src="pictures/photo.JPG" alt="">
+        </section>
+    </div></div>
+
+    <div class="slide" id="impact4"><div>
+        <section>
+            <header>
+                <h2>Impact On Society and Environment:<br/>Benefits to the Society</h2>
+            </header>
+            <ul>
+                <li>Keeping pace with today's fast life schedules.</li>
+                <li>Skilled worker job opening in web design development and maintenance fields.</li>
+                <li>With third party involvement this project could be self-financed.</li>
+            </ul>
+        </section>
+    </div></div>
+
+    <div class="slide shout" id="conclusion"><div>
+        <section>
+            <header>
+                <h2>Conclusion</h2>
+            </header>
+        </section>
+    </div></div>
+
+    <div class="slide" id="conclusion1"><div>
+        <section>
+            <header>Conclusion:<br/>Milestones</h2>
+            </header>
+            <ul>
+                <li>Chose client hardware</li>
+                <li>Tested hardware performance</li>
+                <li>Software stack established</li>
+                <li>Designed and implemented management interface layout</li>
+            </ul>
+        </section>
+    </div></div>
+
+    <div class="slide" id="conclusion2"><div>
+        <section>
+            <header>Conclusion:<br/>Future Plans</h2>
+            </header>
+            <ul>
+                <li>Finish all software implementations by February</li>
+                <ul>
+                    <li>CMS, Client UI</li>
+                    <li>API, Business Logic</li>
+                    <li>Database</li>
+                </ul>
+                <li>Integration testing by late February</li>
+                <li>Field test platform by March</li>
+                <li>Final product ready by April 1st</li>
+            </ul>
+        </section>
+    </div></div>
+
+    <div class="slide shout" id="end"><div>
+        <section>
+            <header>
+                <h2>End</h2>
+            </header>
         </section>
     </div></div>
 
