--- a/index.html
+++ b/index.html
@@ -228,8 +228,7 @@
             <header>
                 <h2>Overview of Proposed Platform Architecture</h2>
             </header>
-                Add image of server client raspberry pi
-                <img src="pictures/ten2012.png" width="70%" alt="" />
+                <img src="pictures/asd.jpg" width="60%" alt="" />
         </section>
     </div></div>
 
@@ -245,40 +244,55 @@
     <div class="slide" id="software1"><div>
         <section>
             <header>
-                <h2>Software:<br/>Slide 1</h2>
+                <h2>Software:<br/>Build with latest Web Technologies</h2>
             </header>
-            Built with latest Web Technologies
-            Explore and Leverage latest  web technologies
-            Extensibility to website, mobile devices, social media
-
-            Redesign of TeN Platform
-        </section>
-    </div></div>
-
-    <div class="slide" id="software2"><div>
-        <section>
-            <header>
-                <h2>Software:<br/>Slide 2</h2>
-            </header>
-            Look back on diagram
+            <ul>
+                <li>The move away from Adobe Flex</li>
+                    <span class="example">- Low abundance of Flex developers, harder to maintain code base</span><br/>
+                <li>Explore and leverage <strong>advantages of web technologies</strong></li>
+                    <span class="example">- Large development community, Improved service accessibility, Better tools</span><br/>
+                <li>Easier distribution of content</li>
+                    <span class="example">- Extensibility to website, mobile devices, social media</span><br/>
+            </ul>
         </section>
     </div></div>
 
     <div class="slide" id="software3"><div>
         <section>
             <header>
-                <h2>Software:<br/>Considerations</h2>
+                <h2>Software:<br/>Considerations before R&D</h2>
             </header>
             <ol>
-                <li>Web Development Heavy</li>
-                    <span class="example">- Prior knowledge, Learning curve</span><br/>
-                <li>Three Months of Development</li>
-                <span class="example">- Agile Development Process</span><br/>
-                <li>Four simultaneous Developers & Testers</li>
+                <li>Two Months of Development</li>
+                    <span class="example">- Agile development process</span><br/>
+                <li>Four Developers & Testers</li>
+                    <span class="example">- Litte prior knowledge, High learning curve</span><br/>
+                <li>Redesign of TeN Platform from scratch</li>
+                    <span class="example">- Web development heavy, Security risks</span><br/>
             </ol>
 
         </section>
     </div></div>
+
+<!--     <div class="slide" id="software2"><div>
+        <section>
+            <header>
+                <h2>Software:<br/>Redesign of TeN Platform</h2>
+            </header>
+            <img src="pictures/asd.jpg"/>
+        </section>
+    </div></div> -->
+
+    <div class="slide cover" id="software35"><div>
+        <section>
+            <header>
+                <h2></h2>
+            </header>
+            <img src="pictures/asd.jpg" alt="">
+        </section>
+    </div></div>
+
+
 
     <div class="slide" id="software4"><div>
         <section>
